# Game-hacks

./: .gitignore  BUILD.md  CMakeLists.txt  README.md  TECHNICAL.md
driver/: GameMemoryReader.inf  MICROSOFT_COMPLIANCE.md  Makefile  kernel_driver.c  kernel_driver.h  sources
examples/: example_usage.cpp
src/: EntityTracker.cpp  EntityTracker.h  MemoryReader.cpp  MemoryReader.h  OffsetFinder.cpp  OffsetFinder.h  PatternScanner.cpp  PatternScanner.h  VulnerableDriverExploit.cpp  VulnerableDriverExploit.h  main.cpp
